# DQ

./: CMakeLists.txt
Examples/: CMakeLists.txt
Examples/DrawModel/: CMakeLists.txt  DrawModel.cpp
Examples/DrawModel/Model/: Model.dq  Model_basecolor.tga  Model_metallic_roughness.tga  Model_normal.tga
Include/Graphics/: DX12CommandList.h  DX12Texture2D.h  Device.h
Include/PCH/: PCH.hpp
Include/Renderer/: Renderer.h
Include/Scene/: Scene.h
Include/Texture/: Texture2D.h
Include/Utility/: Window.h
Source/: CMakeLists.txt
Source/Graphics/: DX12Texture2D.cpp  Device.cpp
Source/Renderer/: Renderer.cpp
Source/Scene/: Scene.cpp
Source/Texture/: Texture2D.cpp
Source/Utility/: Window.cpp
Tools/: CMakeLists.txt
Tools/BakeModel/: BakeModel.cpp  BakeModel.h  CMakeLists.txt  JSON.cpp  Model.cpp
